--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Abdul Moqueet | Full Stack Web Developer Portfolio">
+    <meta name="description" content="PT Rendi Nur Cahyo">
     <meta name="keywords"
         content="abdul moqueet, portfolio, full stack developer, moqueet, github.com/abdulmoqueet, abdul moqueet github">
-    <meta name="author" content="Abdul Moqueet">
+    <meta name="author" content="Rendi Nur Cahyo">
 
     <meta property='og:title' content='Abdul Moqueet | Portfolio' />
     <meta property='og:image' content='https://abdulmoqueet.github.io/thumbnail.jpg' />
