--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
         content="abdul moqueet, portfolio, full stack developer, moqueet, github.com/abdulmoqueet, abdul moqueet github">
     <meta name="author" content="Abdul Moqueet">
 
-    <meta property='og:title' content='Abdul Moqueet | Portfolio' />
+    <meta property='og:title' content='PT Terra Agro Santoso | International Trader' />
     <meta property='og:image' content='https://abdulmoqueet.github.io/thumbnail.jpg' />
-    <meta property='og:description' content='Abdul Moqueet | Full Stack Web Developer Portfolio' />
+    <meta property='og:description' content='PT Terra Agro Santoso | Golden Sugar International Product' />
     <meta property='og:url' content='http://abdulmoqueet.github.io/' />
 
-    <meta name="twitter:card" value="Abdul Moqueet | Full Stack Web Developer Portfolio">
+    <meta name="twitter:card" value="PT Terra Agro Santoso | Golden Sugar International Product">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <title>Abdul Moqueet | Portfolio</title>
+    <title>Sae Bugi Danu S </title>
 
     <style>
         *{
