--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Abdul Moqueet | Full Stack Web Developer Portfolio">
+    <meta name="description" content="PT Terra Agro Santoso | International Trader Golden Sugar">
     <meta name="keywords"
         content="abdul moqueet, portfolio, full stack developer, moqueet, github.com/abdulmoqueet, abdul moqueet github">
     <meta name="author" content="Abdul Moqueet">
 
-    <meta property='og:title' content='Abdul Moqueet | Portfolio' />
+    <meta property='og:title' content='PT Terra Agro Santoso | Company Profile' />
     <meta property='og:image' content='https://abdulmoqueet.github.io/thumbnail.jpg' />
-    <meta property='og:description' content='Abdul Moqueet | Full Stack Web Developer Portfolio' />
+    <meta property='og:description' content='PT Terra Agro Santoso | International Trader Golden Sugar' />
     <meta property='og:url' content='http://abdulmoqueet.github.io/' />
 
     <meta name="twitter:card" value="Abdul Moqueet | Full Stack Web Developer Portfolio">
